[backend] kakao login 구현 [frontend] kakao login 구현

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,5 +11,6 @@
 
   <body>
     <div id="root"></div>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </body>
 </html>
