[frontend] kakao map api add [frontend] kakao map display

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <div id="root"></div>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a912c08e5c92265ba1f87d2f01c3161"></script>
   </body>
 </html>
