[forntend] webpack config devtool "eval > source-map" fix

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
     />
+    <link type="text/css" rel="stylesheet" href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css">
+    <link type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap">
     <title>MOIM: 모임이 모이다</title>
   </head>
 
