--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,6 @@
   <body>
     <div id="root"></div>
     <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a912c08e5c92265ba1f87d2f01c3161"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a912c08e5c92265ba1f87d2f01c3161&libraries=services"></script>
   </body>
 </html>
